<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etOrderTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/which_car"
        android:textAlignment="center" />

    <RadioGroup
        android:id="@+id/rdGrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdBtnCarOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/first_car" />

        <RadioButton
            android:id="@+id/rdBtnCarTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/second_car" />

        <RadioButton
            android:id="@+id/rdBtnCarThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/third_car" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cbSeats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/better_seats" />

            <CheckBox
                android:id="@+id/cbRugs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rugs" />

            <CheckBox
                android:id="@+id/cbHeatedSteeringWheel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steeringWheelHeated" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtVwOrder"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:padding="10dp"
                android:text="@string/order_summary" />

            <Button
                android:id="@+id/btnOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/order" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/rapid" />

</LinearLayout>